--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.21.1"
 scipy = "^1.10.1"
 pandas = "^2.0.1"
 statsmodels = "^0.14.0"
+plotly = "^5.16.1"
 
 [build-system]
 requires = ["poetry-core"]
